-styling 🎨 -added secondary nav

--- a/index.html
+++ b/index.html
@@ -4,36 +4,53 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Letus/Rentmoola Takehome Assignment</title>
+  <title>Letus Takehome Assignment</title>
   <meta name="description" content="Letus/Rentmoola Takehome Assignment" />
   <link rel="icon" href="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/64946/cash-clipart-md.png" />
   <link rel="stylesheet" href="./styles/styles.css" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
-  <header>
-    <a href="https://rentmoola.com/" target="_blank">
-      <img 
-        src="https://gdm-catalog-fmapi-prod.imgix.net/ProductLogo/13c0a6c6-45f1-458a-af1f-258100fabc4d.png"
-        alt="Logo that says 'Letus by Rentmoola'" />
-    </a>
-
-    <h1>Letus/Rentmoola Takehome Assignment</h1>
-  </header>
-
-  <nav>
+  <nav class="primary-nav">
     <ul>
-      <a href="./questions/q1.html">
-          <li>Q1</li>
-      </a>
-      <a href="./questions/q2.html">
-          <li>Q2</li>
-      </a>
-      <a href="./questions/q3.html">
-          <li>Q3</li>
-      </a>
+      <li>
+        <a class="primary-nav__link primary-nav__link--active" href="/index.html">Home</a>
+      </li>
+      <li>
+        <a class="primary-nav__link" href="./questions/q1.html">Q1</a>
+      </li>
+      <li>
+        <a class="primary-nav__link" href="./questions/q2.html">Q2</a>
+      </li>
+      <li>
+        <a class="primary-nav__link" href="./questions/q3.html">Q3</a>
+      </li>
     </ul>
   </nav>
-  
+
+  <header>
+    <a href="https://let.us/" target="_blank">
+      <img 
+        src="https://s3-eu-west-1.amazonaws.com/tpd/logos/5fc8ff888f14430001f4b141/0x0.png"
+        alt="Logo that says 'Letus - Flexible Rent, Infinite Possibilities'"
+        class="logo"
+      />
+    </a>
+    <h1>Takehome Assignment</h1>
+  </header>
+
+  <nav class="secondary-nav">
+    <ul>
+      <li>
+        <a class="secondary-nav__link" href="./questions/q1.html">Q1</a>
+      </li>
+      <li>
+        <a class="secondary-nav__link" href="./questions/q2.html">Q2</a>
+      </li>
+      <li>
+        <a class="secondary-nav__link" href="./questions/q3.html">Q3</a>
+      </li>
+    </ul>
+  </nav>
 </body>
 </html>
