--- a/questions/q3.html
+++ b/questions/q3.html
@@ -4,25 +4,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Letus/Rentmoola Takehome Assignment (Q3)</title>
-  <meta name="description" content="Letus/Rentmoola Takehome Assignment (Q3)" />
+  <title>Letus Takehome Assignment (Q3)</title>
+  <meta name="description" content="Letus Takehome Assignment (Q3)" />
   <link rel="icon" href="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/64946/cash-clipart-md.png" />
   <link rel="stylesheet" href="../styles/styles.css" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
-
-  <nav>
+  <nav class="primary-nav">
     <ul>
-      <a href="../index.html">
-          <li>Home</li>
-      </a>
-      <a href="./q2.html">
-          <li>Q1</li>
-      </a>
-      <a href="./q3.html">
-          <li>Q2</li>
-      </a>
+      <li>
+        <a class="primary-nav__link" href="../index.html">Home</a>
+      </li>
+      <li>
+        <a class="primary-nav__link" href="./q1.html">Q1</a>
+      </li>
+      <li>
+        <a class="primary-nav__link" href="./q2.html">Q2</a>
+      </li>
+      <li>
+        <a class="primary-nav__link primary-nav__link--active" href="./q3.html">Q3</a>
+      </li>
     </ul>
   </nav>
 
