-added in fadeIn animation ☁️

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Letus Takehome Assignment</title>
-  <meta name="description" content="Letus/Rentmoola Takehome Assignment" />
+  <title>Letus Takehome Assignment | Home</title>
+  <meta name="description" content="Letus Takehome Assignment (Home)" />
   <link rel="icon" href="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/64946/cash-clipart-md.png" />
   <link rel="stylesheet" href="./styles/styles.css" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
