-added code snippets 🧑‍💻

--- a/questions/q2.html
+++ b/questions/q2.html
@@ -29,17 +29,12 @@
     </ul>
   </nav>
 
-  Given:
+  <h1>Given:</h1>
 
-function func(cont, cMatch) {
-  for (var i = 0; i < cont.length; ++i) {
-    if (cMatch(cont[i], i)) {
-      cont.splice(i, 1);
-    }
-  }
-}
-
-What is “func” trying to accomplish? Are there any problems with the function?
+  <section>
+    <img src="../assets/q2-code-snippet.png" class="code-snippet">
+    <p>What is “func” trying to accomplish? Are there any problems with the function?</p>
+  </section>
   
 </body>
 </html>
