--- a/questions/q3.html
+++ b/questions/q3.html
@@ -28,21 +28,9 @@
     </ul>
   </nav>
 
-  Is there anything wrong with the code snipped below?
-
-var ARR = ['hello', 'my', 'name', 'is', 'test'];
-
-try {
-  for (var i = 0; i <= ARR.length; ++i) {
-    (function () {
-      setTimeout(function () {
-        if (!ARR[i]) throw Error('Empty word!');
-        console.log(ARR[i]);
-      }, i * 10);
-    })();
-  }
-} catch (e) {
-  console.log('Error: ' + e);
-}
+  <section>
+    <h1>Is there anything wrong with the code snipped below?</h1>
+    <img src="../assets/q3-code-snippet.png" class="code-snippet">
+  </section>
 </body>
 </html>
