-moved some css rules to global stylesheet -added starter code for todo functionality ✅

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
   <title>Letus Takehome Assignment | Home</title>
   <meta name="description" content="Letus Takehome Assignment (Home)" />
   <link rel="icon" href="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/64946/cash-clipart-md.png" />
-  <link rel="stylesheet" href="./styles/styles.css" />
-  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <link rel="stylesheet" href="../styles/index.css" />
+  <link rel="stylesheet" href="../styles/global.css" />
 </head>
-<body>
+<body class="flex-column-center">
   <nav class="primary-nav">
-    <ul>
+    <ul class="flex-row-center">
       <li>
         <a class="primary-nav__link primary-nav__link--active" href="/index.html">Home</a>
       </li>
       <li>
-        <a class="primary-nav__link" href="./questions/q1.html">Q1</a>
+        <a class="primary-nav__link" href="./pages/q1.html">Q1</a>
       </li>
       <li>
-        <a class="primary-nav__link" href="./questions/q2.html">Q2</a>
+        <a class="primary-nav__link" href="./pages/q2.html">Q2</a>
       </li>
       <li>
-        <a class="primary-nav__link" href="./questions/q3.html">Q3</a>
+        <a class="primary-nav__link" href="./pages/q3.html">Q3</a>
       </li>
     </ul>
   </nav>
@@ -41,15 +41,15 @@
   </header>
 
   <nav class="secondary-nav">
-    <ul>
+    <ul class="flex-row-center">
       <li>
-        <a class="secondary-nav__link" href="./questions/q1.html">Q1</a>
+        <a class="secondary-nav__link button" href="./pages/q1.html">Q1</a>
       </li>
       <li>
-        <a class="secondary-nav__link" href="./questions/q2.html">Q2</a>
+        <a class="secondary-nav__link button" href="./pages/q2.html">Q2</a>
       </li>
       <li>
-        <a class="secondary-nav__link" href="./questions/q3.html">Q3</a>
+        <a class="secondary-nav__link button" href="./pages/q3.html">Q3</a>
       </li>
     </ul>
   </nav>
