--- a/pages/q3.html
+++ b/pages/q3.html
@@ -7,12 +7,12 @@
   <title>Letus Takehome Assignment (Q3)</title>
   <meta name="description" content="Letus Takehome Assignment (Q3)" />
   <link rel="icon" href="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/64946/cash-clipart-md.png" />
-  <link rel="stylesheet" href="../styles/styles.css" />
-  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <link rel="stylesheet" href="../styles/global.css" />
+  <link rel="stylesheet" href="../styles/q3.css" />
 </head>
-<body>
+<body class="flex-column-center">
   <nav class="primary-nav">
-    <ul>
+    <ul class="flex-row-center">
       <li>
         <a class="primary-nav__link" href="../index.html">Home</a>
       </li>
