--- a/pages/q1.html
+++ b/pages/q1.html
@@ -29,17 +29,26 @@
     </ul>
   </nav>
 
-  <section>
-    <h1>To-Do List</h1>
+  <main>
+    <h1 class="text-center">To-Do List</h1>
+
     <div class="flex-row-center input-wrapper">
-      <input id="todo-list__input" type="text" required placeholder="Enter Your To-Do here..." />
-      <button id="todo-list__add-button" class="button">&#43;</button>
+      <input id="input" type="text" required placeholder="Enter Your To-Do here..." />
+      <button id="add" class="button">&#43;</button>
     </div>
 
-    <div id="todo-list-wrapper">
-      <ul id="todo-list"></ul>
+    <div id="list-wrapper">
+      <section id="todo-section">
+        <h2>To-Do:</h2>
+        <ul id="todo-list"></ul>
+      </section>
+
+      <section id="done-section">
+        <h2>Done:</h2>
+        <ul id="done-list"></ul>
+      </section>
     </div>
-  </section>
+  </main>
 
   <script src="../scripts/script.js"></script>
 </body>
