--- a/pages/q1.html
+++ b/pages/q1.html
@@ -32,21 +32,15 @@
   <main>
     <h1 class="text-center">To-Do List</h1>
 
-    <div class="flex-row-center input-wrapper">
-      <input id="input" type="text" required placeholder="Enter Your To-Do here..." />
-      <button id="add" class="button">&#43;</button>
-    </div>
+    <form id="todo-form">
+      <div class="flex-row-center todo-input-wrapper">
+        <input id="todo-add-input" type="text" placeholder="e.g. grocery shopping" />
+        <button id="todo-add-button" class="button">&#43;</button>
+      </div>
+    </form>
 
-    <div id="list-wrapper">
-      <section id="todo-section">
-        <h2>To-Do:</h2>
-        <ul id="todo-list"></ul>
-      </section>
-
-      <section id="done-section">
-        <h2>Done:</h2>
-        <ul id="done-list"></ul>
-      </section>
+    <div id="todo-list-wrapper">
+      <ul id="todo-list"></ul>
     </div>
   </main>
 
