--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 </head>
 <body class="flex-column-center">
   <nav class="primary-nav">
-    <ul class="flex-row-center">
-      <li>
+    <ul class="primary-nav__list flex-row-center">
+      <li class="primary-nav__list-item">
         <a class="primary-nav__link primary-nav__link--active" href="/index.html">Home</a>
       </li>
-      <li>
+      <li class="primary-nav__list-item">
         <a class="primary-nav__link" href="./pages/q1.html">Q1</a>
       </li>
-      <li>
+      <li class="primary-nav__list-item">
         <a class="primary-nav__link" href="./pages/q2.html">Q2</a>
       </li>
-      <li>
+      <li class="primary-nav__list-item">
         <a class="primary-nav__link" href="./pages/q3.html">Q3</a>
       </li>
     </ul>
@@ -36,19 +36,18 @@
         class="logo"
       />
     </a>
-
     <h1>Takehome Assignment</h1>
   </header>
 
   <nav class="secondary-nav">
-    <ul class="flex-row-center">
-      <li>
+    <ul class="secondary-nav__list flex-row-center">
+      <li class="secondary-nav__list-item">
         <a class="secondary-nav__link button" href="./pages/q1.html">Q1</a>
       </li>
-      <li>
+      <li class="secondary-nav__list-item">
         <a class="secondary-nav__link button" href="./pages/q2.html">Q2</a>
       </li>
-      <li>
+      <li class="secondary-nav__list-item">
         <a class="secondary-nav__link button" href="./pages/q3.html">Q3</a>
       </li>
     </ul>
