--- a/pages/q2.html
+++ b/pages/q2.html
@@ -10,53 +10,73 @@
   <link rel="stylesheet" href="../styles/global.css" />
   <link rel="stylesheet" href="../styles/q2.css" />  
 </head>
-<body class="flex-column-center">
+<body>
   <nav class="primary-nav">
-    <ul class="flex-row-center">
-      <li>
+    <ul class="primary-nav__list flex-row-center">
+      <li class="primary-nav__list-item">
         <a class="primary-nav__link" href="../index.html">Home</a>
       </li>
-      <li>
+      <li class="primary-nav__list-item">
         <a class="primary-nav__link" href="./q1.html">Q1</a>
       </li>
-      <li>
+      <li class="primary-nav__list-item">
         <a class="primary-nav__link primary-nav__link--active" href="./q2.html">Q2</a>
       </li>
-      <li>
+      <li class="primary-nav__list-item">
         <a class="primary-nav__link" href="./q3.html">Q3</a>
       </li>
     </ul>
   </nav>
 
-  <h1>Given:</h1>
+  <main class="code-question">
+    <!-- QUESTION -->
+    <section class="code-question__question">
+      <h1>Given:</h1>
+      <img 
+        src="../assets/q2-code-snippet.png" 
+        class="code-snippet"
+        alt="Code snippet"
+      />
+      <p id="prompt">What is <code>func</code> trying to accomplish? Are there any problems with the function?</p>
+    </section>
 
-  <main>
-    <img src="../assets/q2-code-snippet.png" class="code-snippet">
-    <p>What is “func” trying to accomplish? Are there any problems with the function?</p>
+    <hr class="divider" />
+
+    <!-- ANSWER -->
+    <section class="code-question__answer">
+      <p>
+        <code>func</code> is a function, declared via standard function declaration, that accepts 2 paramaters: <strong>an array, and a callback function.</strong>
+      </p>
+
+      <br/>
+
+      <p>
+        The callback function's purpose is to check if 2 values match - given the invocation of the callback function in the <code>for</code> loop with it's 2 arguments: (<code>cont[i]</code>, which represents the current value, and <code>i</code>, which represents the current index.
+      </p>
+
+      <br/> 
+
+      <p>
+        The purpose of this <code>func</code> function is to loop through an array, and for each value, invoke the callback function and check to see whether or not the <strong>current value matches with the current index</strong>; if this is true, remove that value from the array, otherwise, do nothing.
+      </p>
+
+      <p>
+        The main issue with this function is that the values can be skipped. For example, if we pass in an array of <code>[0, 1, 2, 3]</code>, on the first iteration, our conditional will return true because <code>i (0)</code> is equal to the current value (0). We remove that item from the array, now the array looks like <code>[1, 2, 3]</code>, but <code>i</code> increments to 1 now, which means the current value we're looking at would be 2. We don't even look at 1, which means it doesn't get evaluated, which defeats the purpose of this function: to check <strong>EACH</strong> value and see if it matches the current index.
+      </p>
+    </section>
+
+    <hr class="divider"/>
+
+    <!-- REFACTOR -->
+    <section class="code-question__refactor">
+      <p>I would refactor the above code snippet to the following:</p>
+
+      <img 
+        src="../assets/q2-refactor-snippet.png" 
+        class="code-snippet" 
+        alt="Code snippet" 
+      />
+    </section>
   </main>
-
-  <section id="answer">
-    <p>
-      <code>func</code> is a function, declared via standard function declaration, that accepts 2 paramaters: <strong>an array, and a callback function.</strong>
-    </p>
-
-    <br/>
-
-    <p>
-      The callback function's purpose is to check if 2 values match - given the invocation of the callback function in the <code>for</code> loop with it's 2 arguments: (<code>cont[i]</code>, which represents the current value, and <code>i</code>, which represents the current index.
-    </p>
-
-    <br/> 
-
-    <p>
-      The purpose of this <code>func</code> function is to loop through an array, and for each value, invoke the callback function and check to see whether or not the <strong>current value matches with the current index</strong>; if this is true, remove that value from the array, otherwise, do nothing.
-    </p>
-
-    <p>
-      The main issue with this function is that the values can be skipped. For example, if we pass in an array of <code>[0, 1, 2, 3]</code>, on the first iteration, our conditional will return true because <code>i (0)</code> is equal to the current value (0). We remove that item from the array, now the array looks like <code>[1, 2, 3]</code>, but <code>i</code> increments to 1 now, which means the current value we're looking at would be 2. We don't even look at 1, which means it doesn't get evaluated, which defeats the purpose of this function: to check <strong>EACH</strong> value and see if it matches the current index.
-    </p>
-    
-  </section>
-  
 </body>
 </html>
