-refactoring functions and working out buns 🪲

--- a/index.html
+++ b/index.html
@@ -1,56 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Letus Takehome Assignment | Home</title>
-  <meta name="description" content="Letus Takehome Assignment (Home)" />
-  <link rel="icon" href="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/64946/cash-clipart-md.png" />
-  <link rel="stylesheet" href="../styles/index.css" />
-  <link rel="stylesheet" href="../styles/global.css" />
-</head>
-<body class="flex-column-center">
-  <nav class="primary-nav">
-    <ul class="primary-nav__list flex-row-center">
-      <li class="primary-nav__list-item">
-        <a class="primary-nav__link primary-nav__link--active" href="/index.html">Home</a>
-      </li>
-      <li class="primary-nav__list-item">
-        <a class="primary-nav__link" href="./pages/q1.html">Q1</a>
-      </li>
-      <li class="primary-nav__list-item">
-        <a class="primary-nav__link" href="./pages/q2.html">Q2</a>
-      </li>
-      <li class="primary-nav__list-item">
-        <a class="primary-nav__link" href="./pages/q3.html">Q3</a>
-      </li>
-    </ul>
-  </nav>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Letus Takehome Assignment | Home</title>
+    <meta name="description" content="Letus Takehome Assignment (Home)" />
+    <link rel="icon" href="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/64946/cash-clipart-md.png" />
+    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
+  </head>
+  <body class="flex-column-center">
+    <nav class="primary-nav">
+      <ul class="flex-row-center">
+        <li>
+          <a class="primary-nav__link primary-nav__link--active" href="/index.html">Home</a>
+        </li>
+        <li>
+          <a class="primary-nav__link" href="./pages/q1.html">Q1</a>
+        </li>
+        <li>
+          <a class="primary-nav__link" href="./pages/q2.html">Q2</a>
+        </li>
+        <li>
+          <a class="primary-nav__link" href="./pages/q3.html">Q3</a>
+        </li>
+      </ul>
+    </nav>
 
-  <header>
-    <a href="https://let.us/" target="_blank">
-      <img 
-        src="https://s3-eu-west-1.amazonaws.com/tpd/logos/5fc8ff888f14430001f4b141/0x0.png"
-        alt="Logo that says 'Letus - Flexible Rent, Infinite Possibilities'"
-        class="logo"
-      />
-    </a>
-    <h1>Takehome Assignment</h1>
-  </header>
+    <header>
+      <a href="https://let.us/" target="_blank">
+        <img 
+          src="./assets/letus-header-logo.png"
+          alt="Logo that says 'Letus - Flexible Rent, Infinite Possibilities'"
+          class="logo"
+        />
+      </a>
+      <h1>Takehome Assignment</h1>
+    </header>
 
-  <nav class="secondary-nav">
-    <ul class="secondary-nav__list flex-row-center">
-      <li class="secondary-nav__list-item">
-        <a class="secondary-nav__link button" href="./pages/q1.html">Q1</a>
-      </li>
-      <li class="secondary-nav__list-item">
-        <a class="secondary-nav__link button" href="./pages/q2.html">Q2</a>
-      </li>
-      <li class="secondary-nav__list-item">
-        <a class="secondary-nav__link button" href="./pages/q3.html">Q3</a>
-      </li>
-    </ul>
-  </nav>
-</body>
+    <nav class="secondary-nav">
+      <ul class="flex-row-center">
+        <li>
+          <a class="secondary-nav__link button" href="./pages/q1.html">Q1</a>
+        </li>
+        <li>
+          <a class="secondary-nav__link button" href="./pages/q2.html">Q2</a>
+        </li>
+        <li>
+          <a class="secondary-nav__link button" href="./pages/q3.html">Q3</a>
+        </li>
+      </ul>
+    </nav>
+
+    <footer>
+      <p>2022 LETUS TAKEHOME ASSIGNMENT &copy;</p>
+      <a href="https://let.us/" target="_blank">
+        <img
+          src="./assets/letus-footer-logo.png"
+          alt="Logo that says 'Letus - Flexible Rent, Infinite Possibilities'"
+        />
+      </a>
+    </footer>
+  </body>
 </html>
