--- a/pages/q1.html
+++ b/pages/q1.html
@@ -1,49 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Letus Takehome Assignment (Q1)</title>
-  <meta name="description" content="Letus Takehome Assignment (Q1)" />
-  <link rel="icon" href="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/64946/cash-clipart-md.png" />
-  <link rel="stylesheet" href="../styles/global.css" />
-  <link rel="stylesheet" href="../styles/q1.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-  <nav class="primary-nav">
-    <ul class="primary-nav__list flex-row-center">
-      <li class="priamry-nav__list-item">
-        <a class="primary-nav__link" href="../index.html">Home</a>
-      </li>
-      <li class="primary-nav__list-item">
-        <a class="primary-nav__link primary-nav__link--active" href="/q1.html">Q1</a>
-      </li>
-      <li class="primary-nav__list-item">
-        <a class="primary-nav__link" href="./q2.html">Q2</a>
-      </li>
-      <li class="primary-nav__list-item">
-        <a class="primary-nav__link" href="./q3.html">Q3</a>
-      </li>
-    </ul>
-  </nav>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Letus Takehome Assignment (Q1)</title>
+    <meta name="description" content="Letus Takehome Assignment (Q1)" />
+    <link rel="icon" href="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/64946/cash-clipart-md.png" />
+    <link rel="stylesheet" href="../styles/global.css" />
+    <link rel="stylesheet" href="../styles/q1.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <nav class="primary-nav">
+      <ul class="flex-row-center">
+        <li>
+          <a class="primary-nav__link" href="../index.html">Home</a>
+        </li>
+        <li>
+          <a class="primary-nav__link primary-nav__link--active" href="./q1.html">Q1</a>
+        </li>
+        <li>
+          <a class="primary-nav__link" href="./q2.html">Q2</a>
+        </li>
+        <li>
+          <a class="primary-nav__link" href="./q3.html">Q3</a>
+        </li>
+      </ul>
+    </nav>
 
-  <main class="code-question">
-    <h1>To-Do List</h1>
+    <main class="code-question">
+      <h1>To-Do List</h1>
 
-    <form id="todo-form">
       <div class="flex-row-center" id="todo-input-wrapper">
         <input id="todo-add-input" type="text" placeholder="e.g. grocery shopping" />
-        <button id="todo-add-button" class="button">&#43;</button>
+        <button id="todo-add-button" class="button">&plus;</button>
       </div>
-    </form>
 
-    <div id="todo-list-wrapper">
-      <ul id="todo-list"></ul>
-    </div>
-  </main>
+      <div id="todo-list-wrapper">
+        <ul id="todo-list"></ul>
+      </div>
+    </main>
 
-  <script src="../scripts/script.js"></script>
-</body>
+    <footer>
+      <p>2022 LETUS TAKEHOME ASSIGNMENT &copy;</p>
+      <a href="https://let.us/" target="_blank">
+        <img
+          src="../assets/letus-footer-logo.png"
+          alt="Logo that says 'Letus - Flexible Rent, Infinite Possibilities'"
+        />
+      </a>
+    </footer>
+
+    <script src="../scripts/script2.js"></script>
+  </body>
 </html>
