--- a/pages/q1.html
+++ b/pages/q1.html
@@ -40,6 +40,28 @@
       <div id="todo-list-wrapper">
         <ul id="todo-list"></ul>
       </div>
+
+      <nav class="pagination">
+        <button 
+          class="pagination__button" 
+          id="pagination-button-previous" 
+          title="Previous page" 
+          aria-label="Previous page"
+        >
+          &lt;
+        </button>
+         
+        <div id="pagination__numbers"></div>
+         
+        <button 
+          class="pagination__button" 
+          id="pagination-button-next" 
+          title="Next page" 
+          aria-label="Next page"
+        >
+          &gt;
+        </button>
+      </nav>
     </main>
 
     <footer>
@@ -52,6 +74,7 @@
       </a>
     </footer>
 
-    <script src="../scripts/script2.js"></script>
+    <script type="module" src="../scripts/todos.js"></script>
+    <script type="module" src="../scripts/pagination.js"></script>
   </body>
 </html>
