--- a/pages/question-1.html
+++ b/pages/question-1.html
@@ -33,10 +33,12 @@
       <h1>To-Do List</h1>
 
        <!-- Input for To-Do List  -->
-      <div class="flex-row-center" id="todo-input-wrapper">
-        <input id="todo-add-input" type="text" placeholder="e.g. grocery shopping" />
-        <button id="todo-add-button" class="button">&plus;</button>
-      </div>
+      <form id="todo-form">
+        <div class="flex-row-center" id="todo-input-wrapper">
+          <input id="todo-add-input" type="text" placeholder="e.g. grocery shopping" />
+          <button type="submit" id="todo-add-button" class="button">&plus;</button>
+        </div>
+      </form>
 
       <!-- To-Do List  -->
       <div id="todo-list-wrapper">
